--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,8 @@ click==8.1.1
 fastapi==0.75.0
 h11==0.13.0
 idna==3.3
+Jinja2==3.1.1
+MarkupSafe==2.1.1
 pydantic==1.9.0
 python-multipart==0.0.5
 requests==2.27.1
