--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+altgraph==0.17.2
 anyio==3.5.0
 asgiref==3.5.0
 certifi==2021.10.8
@@ -7,8 +8,11 @@ fastapi==0.75.0
 h11==0.13.0
 idna==3.3
 Jinja2==3.1.1
+macholib==1.16
 MarkupSafe==2.1.1
 pydantic==1.9.0
+pyinstaller==4.10
+pyinstaller-hooks-contrib==2022.3
 python-multipart==0.0.5
 requests==2.27.1
 six==1.16.0
